<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_adopt"
        android:icon="@drawable/cat"
        android:title="@string/title_adopt" />

    <item
        android:id="@+id/navigation_rescue"
        android:icon="@drawable/handshake"
        android:title="@string/title_rescue" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/bell"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_personal"
        android:icon="@drawable/user"
        android:title="@string/title_personal" />

</menu>