<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.petpetpet.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_adopt"
        android:name="com.example.petpetpet.ui.adopt.AdoptFragment"
        android:label="@string/title_adopt"
        tools:layout="@layout/fragment_adopt" />

    <fragment
        android:id="@+id/navigation_rescue"
        android:name="com.example.petpetpet.ui.rescue.RescueFragment"
        android:label="@string/title_rescue"
        tools:layout="@layout/fragment_rescue" />
</navigation>